syntax = "proto3";



enum CmdId {
	SUCC = 0;
	FAIL = 1;
}
