syntax = "proto3";



import "VisionType.proto";
import "SceneEntityInfo.proto";

message SceneEntityAppearNotify {
	enum HHOJIPLPJCP {
		option allow_alias = true;
		NONE = 0;
		PEPPOHPHJOJ = 274;
		DCDNILFDFLB = 0;
		NNBKOLMPOEA = 1;
	}

	repeated SceneEntityInfo entityList = 10;
	VisionType appearType = 3;
	uint32 param = 14;
}
